samples/_failures_safe/1761187645_8a20f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff8f4c59.c: In function ‘main’:
./samples/SAFE/__tmp_ff8f4c59.c:149:9: error: expected expression at end of input
  149 |         buffer_free(&
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_ff8f4c59.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ff8f4c59.c:149:9: error: expected declaration or statement at end of input
